FrontEnd/styles.css
html {
    font-family: "Century Gothic", sans-serif;
}

*, *::after, *::before {
    box-sizing: inherit;
}

body {
    box-sizing: border-box;
    margin: 0;
}

.navbar {
    max-width: 640px;
    margin: 50px auto;
    padding: 0 20px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 22px;
}

.navbar__brand {
    display: flex;
    align-items: center;
    font-size: 25px;
}

.navbar__logo {
    margin-right: 30px;
    transform: scale(1.30);
    color: #505050;
}

.navbar__navigation {
    list-style: none;
    display: flex;
    flex-direction: row;
    padding: 0;
    color: #808080;
}

.navbar__navigation-item {
    margin-left: 50px;
    color: inherit;
}

.navbar__link {
    text-decoration: none;
    color: inherit;
}

.main {
    max-width: 450px;
    margin: 0 auto;
    padding: 0 20px;
}

.main__header {
    color: #222222;
}

.form {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.form__input {
    width: 100%
}

.form__label {
    display: block;
    margin-bottom: 10px;
}

.form__textarea {
    width: inherit;
    height: 110px;
    font-size: 14px;
    padding: 12px 20px;
    box-sizing: border-box;
    background-color: #f4f4f4;
    margin-bottom: 10px;
    border: none;
    border-radius: 10px;
}

.form__post {
    background-color: #ff6739;
    box-shadow: 4px 4px #ffdd62bf;
    border: none;
    font-size: 16px;
    font-weight: bold;
    padding: 5px 30px;
    border-radius: 10px;
    color: white;
}

.form__post:hover {
    background-color: #ff9473;
    box-shadow: none;
    cursor: pointer;
}

.entry {
    margin-top: 50px;
}

.entry__title {
    display: inline;
    font-size: 18px;
    color: #505050;
}

.entry__date {
    color:#f26135;
    font-size: 14px;
}

.entry__content {
    font-size: 14px;
    line-height: 150%;
    color: #808080;
}

.footer {
    background-color: #ffdd62e6;
    padding: 40px 0;
    margin: 50px 0 0 0;
    color: #505050;
    font-size: 12px;
}

.footer__content {
    max-width: 640px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
}

.footer .left {
    flex-grow: 2;
    display: flex;
    flex-direction: column;
}

.footer .right {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
}

.footer__column {
    display: flex;
    flex-direction: column;
    margin-left: 50px;
}

.footer__item {
    margin-bottom: 5px;
    color: inherit;
    text-decoration: none;
}

.footer__item:hover {
    text-decoration: underline;
}

